clusters/deployRestream-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restream-backend
  labels:
    app: restream-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restream-backend
  template:
    metadata:
      labels:
        app: restream-backend
    spec:
      containers:
        - name: restream-backend
          image: tchoune/restream-backend:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: volv
          ports:
            - containerPort: 3333
              name: web
              protocol: TCP
          readinessProbe:
            httpGet:
              port: web
              path: /
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: volv
          persistentVolumeClaim:
            claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: restream-backend-nodeport
spec:
  type: NodePort
  selector:
    app: restream-backend
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 31117
