clusters/servicesNginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: default
spec:
    type: NodePort
    selector:
        app: nginx
    ports:
      - name: web
        port: 80
        targetPort: web
        nodePort: 31111
