clusters/servicesRestream-Backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: restream-backend
spec:
  selector:
    app: restream-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
  type: LoadBalancer
