clusters/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restream-ingress
  namespace: restream
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: beyondspeedruns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restream-backend
                port:
                  number: 80
  tls:
    - hosts:
        - beyondspeedruns.com
      secretName: restream-tls
